package edu.fiuba.algo3.modelo;

public interface JokerObserver {
    void removeJoker(JokerApply observable);
}
